# ros2_ws

install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: smartphone = my_py_pkg.smartphone:mainnumber_publisher
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh  package.xml
install/my_twopy_pkg/lib/my_twopy_pkg/: twopy_node
install/my_twopy_pkg/share/my_twopy_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlesim_catch_them_all/share/turtlesim_catch_them_all/: package.sh  package.xml
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: my_first_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: battery.py  hw_status_publisher.py  led_panel.py  my_first_node.py  smartphone.py
src/my_py_pkg/my_py_pkg/install/: setup.bash  (+4 more)
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: number_app.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/msg/: HardwareStatus.msg
src/my_twopy_pkg/: package.xml  setup.cfg  setup.py
src/my_twopy_pkg/my_twopy_pkg/: my_firsttwonode.py
src/turtlesim_catch_them_all/: setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
(+4 files in other folders)
